--- a/1. Regressions.ipynb
+++ b/1. Regressions.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3f974386f5bc40b0bce8e4d2c76f7e20",
+       "model_id": "986f388740e14ba8843e5184b71618d9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -78,13 +78,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5471f023e1804f80a7ab0d960584b21d",
+       "model_id": "7b0e5d9c5d1449178d1502ae846b604f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -141,13 +141,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b1d0725969424e7a9deb2d58918dd144",
+       "model_id": "d307ac4b216e411a9d928836c9b91ec5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -241,13 +241,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2dbe8c556b84fe8873503bd98bfa937",
+       "model_id": "28b822ec20814903ae0833b9e6298719",
        "version_major": 2,
        "version_minor": 0
       },
@@ -322,7 +322,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.special import huber\n",
     "from sklearn.linear_model import HuberRegressor"
    ]
   },
@@ -356,7 +355,7 @@
     "          on=IntSlider(min=0, max=20, step=1, value=5))\n",
     "def linear_regression_1d_ransac(a, b, e=0.5, n=100, ox=0.5, oy=0.5, on=5):\n",
     "    \"\"\"\n",
-    "    Оцениваем с помощью RANSAC параметры a и b одномерной линейной регрессии: y = a*x + b\n",
+    "    Сравнение RANSAC и HuberRegressor на одномерной линейной регрессии: y = a*x + b\n",
     "    e : уровень шума\n",
     "    n : количество точек\n",
     "    ox, oy : координаты центра выборосов\n",
@@ -371,6 +370,7 @@
     "    yo = np.random.randn(on) + oy\n",
     "    X = np.hstack((x, xo)).reshape((n + on, 1))\n",
     "    Y = np.hstack((y, yo))\n",
+    "    \n",
     "    ransac_regressor = RANSACRegressor()\n",
     "    ransac_regressor.fit(X,Y)\n",
     "    a_hat = ransac_regressor.estimator_.coef_[0]\n",
@@ -391,9 +391,7 @@
     "    r2 = r2_score(y, y_pred)\n",
     "    mse = mean_squared_error(y, y_pred)\n",
     "    mae = mean_absolute_error(y, y_pred)\n",
-    "    #hu = huber (y, y_pred)\n",
-    "    \n",
-    "    #print (hu)\n",
+    "\n",
     "    \n",
     "    plt.scatter(x, y, c='b', marker='o')\n",
     "    plt.scatter(xo, yo, c='r', marker='^')\n",
@@ -405,9 +403,208 @@
     "    \n",
     "    plt.ylim(-12, 12)\n",
     "    plt.legend()\n",
-    "    #plt.title(f'a\\u0302={a_hat:.5} b\\u0302={b_hat:.5} r2={r2:.5} mse={mse:.5} mae={mae:.5} hu={hu:.5}' )\n",
     "    plt.title(f'a\\u0302={a_hat:.5} b\\u0302={b_hat:.5} r2={r2:.5} mse={mse:.5} mae={mae:.5}' )\n",
     "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Various Gradient Desent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import SGDRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def batch(lst, size):\n",
+    "    for i in range(0, len(lst), size):\n",
+    "        yield lst[i:i + size]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(10, 20)\n",
+      "range(20, 30)\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = batch(range(10, 75), 10)\n",
+    "\n",
+    "print (next(b))\n",
+    "print (next(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "145f0338fa9b4c168e45f46f7e9d6966",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(FloatSlider(value=-2.0, description='a', max=2.0, min=-2.0), FloatSlider(value=-1.0, des…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "@interact(a=FloatSlider(min=-2, max=2, step=0.1, value=-2),\n",
+    "          b=FloatSlider(min=-1, max=1, step=0.1, value=-1),\n",
+    "          e=FloatSlider(min=0, max=2, step=0.01, value=0.1),\n",
+    "          n=IntSlider(min=2, max=200, step=2, value=30),\n",
+    "          ox=FloatSlider(min=0, max=5, step=0.1, value=2.5),\n",
+    "          oy=FloatSlider(min=-2, max=2, step=0.1, value=0.5),\n",
+    "          on=IntSlider(min=0, max=20, step=1, value=5),\n",
+    "          iters=IntSlider(min=1, max=200, step=1, value=1),\n",
+    "          alg = (['GD','SGD', 'MinibatchSGD', \"MeanSGD\"]),\n",
+    "          lr_type = (['adaptive', \"invscaling\"]))\n",
+    "            \n",
+    "def linear_regression_1d_different_GD(a, b, e=0.5, n=100, ox=0.5, oy=0.5, on=5, iters = 1, alg = \"MeanSGD\", lr_type = 'adaptive'):\n",
+    "    \"\"\"\n",
+    "    Оцениваем различные варианты градиентного спукска на одномерной линейной регрессии: y = a*x + b\n",
+    "    e : уровень шума\n",
+    "    n : количество точек\n",
+    "    ox, oy : координаты центра выборосов\n",
+    "    on : количество точек с выбросом\n",
+    "    iters : количество итераций\n",
+    "    \"\"\"\n",
+    "    print (alg)\n",
+    "    \n",
+    "    xmin = 0\n",
+    "    xmax = 5\n",
+    "    np.random.seed(42)\n",
+    "    x = np.random.rand(n)*(xmax - xmin) + xmin\n",
+    "    y = a*x + b + e*np.random.randn(n)\n",
+    "    xo = np.random.randn(on) + ox\n",
+    "    yo = np.random.randn(on) + oy\n",
+    "    X = np.hstack((x, xo)).reshape((n + on, 1))\n",
+    "    Y = np.hstack((y, yo))\n",
+    "\n",
+    "    linear_regression = LinearRegression()\n",
+    "    linear_regression.fit(X,Y)\n",
+    "    lr_a_hat = linear_regression.coef_[0]\n",
+    "    lr_b_hat = linear_regression.intercept_\n",
+    "    \n",
+    "    #\n",
+    "    if alg == \"SGD\":\n",
+    "        sgd = SGDRegressor(alpha=0.1,learning_rate=lr_type,max_iter=iters,penalty='none')\n",
+    "        sgd.fit(X,Y)\n",
+    "        lr_a = sgd.coef_[0]\n",
+    "        lr_b = sgd.intercept_\n",
+    "        y_pred = lr_a*X + lr_b\n",
+    "        lr_b = lr_b[0]\n",
+    "        mse = mean_squared_error(Y, y_pred)\n",
+    "        mae = mean_absolute_error(Y, y_pred)\n",
+    "    if alg == \"GD\":\n",
+    "        lr_a, lr_b = 0, 0\n",
+    "        n_els = len(X)\n",
+    "        lr = 0.01  # learning Rate\n",
+    "        for i in range(iters): \n",
+    "            Y_pred = lr_a*X[1] + lr_b  # The current predicted value of Y\n",
+    "            D_m = (-2/n_els) * sum(X[1] * (Y[1] - Y_pred))  # Derivative wrt a\n",
+    "            D_c = (-2/n_els) * sum(Y[1] - Y_pred)  # Derivative wrt b\n",
+    "            lr_a = lr_a - lr * D_m  # Update m\n",
+    "            lr_b = lr_b - lr * D_c  # Update c\n",
+    "            y_pred = lr_a*X[1] + lr_b\n",
+    "            mse = (Y[1]*Y[1] - y_pred[0]*y_pred[0])**0.5\n",
+    "            mae = abs(Y[1] - y_pred[0])\n",
+    "    \n",
+    "    if alg == \"MinibatchSGD\": #Increment / online fit \n",
+    "        n_els = len(X)\n",
+    "        batch_size = 5\n",
+    "        \n",
+    "        X_b = batch(X, batch_size)\n",
+    "        Y_b = batch(Y, batch_size)\n",
+    "        \n",
+    "        sgd = SGDRegressor(alpha=0.1,learning_rate=lr_type,max_iter=iters,penalty='none')\n",
+    "        X_first_iter = next (X_b)\n",
+    "        Y_first_iter = next (Y_b)\n",
+    "        sgd.fit(X_first_iter,Y_first_iter)\n",
+    "        \n",
+    "        lr_a = sgd.coef_[0]\n",
+    "        lr_b = sgd.intercept_\n",
+    "        y_pred = lr_a*X_first_iter + lr_b\n",
+    "        lr_b = lr_b[0]\n",
+    "        mse = mean_squared_error(Y_first_iter, y_pred)\n",
+    "        mae = mean_absolute_error(Y_first_iter, y_pred)\n",
+    "        for i in range(iters):\n",
+    "            if (n_els - (i+1)* batch_size  > 0):\n",
+    "                X_iter = next (X_b)\n",
+    "                Y_iter = next (Y_b)\n",
+    "            else:\n",
+    "                X_iter = X[:-batch_size]\n",
+    "                Y_iter = Y[:-batch_size]\n",
+    "                \n",
+    "            sgd.partial_fit(X_iter,Y_iter)\n",
+    "\n",
+    "            lr_a = sgd.coef_[0]\n",
+    "            lr_b = sgd.intercept_\n",
+    "            y_pred = lr_a*X + lr_b\n",
+    "            lr_b = lr_b[0]    \n",
+    "            mse = mean_squared_error(Y, y_pred)\n",
+    "            mae = mean_absolute_error(Y, y_pred)\n",
+    "\n",
+    "    \"\"\"\n",
+    "    Усреднённый стохастический градиентный спуск, разработанный независимо Руппертом и Поляком в конце 1980-х \n",
+    "    годов, является обычным стохастическим градиентным спуском, который записывает среднее вектора параметров\n",
+    "    \"\"\"\n",
+    "    if alg == \"MeanSGD\":    \n",
+    "    \n",
+    "        sgd = SGDRegressor(alpha=0.1,learning_rate=lr_type,max_iter=iters,penalty='none', average=True)\n",
+    "        sgd.fit(X,Y)\n",
+    "        lr_a = sgd.coef_[0]\n",
+    "        lr_b = sgd.intercept_\n",
+    "        y_pred = lr_a*X + lr_b\n",
+    "        lr_b = lr_b[0]\n",
+    "        mse = mean_squared_error(Y, y_pred)\n",
+    "        mae = mean_absolute_error(Y, y_pred)\n",
+    "    \n",
+    "    #\n",
+    "\n",
+    "    \n",
+    "    plt.scatter(x, y, c='b', marker='o')\n",
+    "    plt.scatter(xo, yo, c='r', marker='^')\n",
+    "    plt.plot([x.min(), x.max()], [x.min()*a + b, x.max()*a + b], label='true', c='b')\n",
+    "    plt.plot([x.min(), x.max()], [x.min()*lr_a_hat + lr_b_hat, x.max()*lr_a_hat + lr_b_hat], label='Linear regression', c='g')\n",
+    "    \n",
+    "    plt.plot([x.min(), x.max()], [x.min()*lr_a + lr_b, x.max()*lr_a + lr_b], label=alg, c='c')\n",
+    "    \n",
+    "    \n",
+    "    plt.ylim(-12, 12)\n",
+    "    plt.legend()\n",
+    "    #print (lr_a)\n",
+    "    #print (lr_b)\n",
+    "    #plt.title(f'a\\u0302={lr_a:.5} b\\u0302={lr_b:.5}')\n",
+    "    plt.title(f'a\\u0302={lr_a:.5} b\\u0302={lr_b:.5} mse={mse:.5} mae={mae:.5}' )\n",
+    "    plt.show()"
    ]
   },
   {
